# catalog-searcher

./: .gitignore  Dockerfile  Jenkinsfile  README.md  env-template  pyproject.toml  requirements.txt
docs/: DevelopmentSetup.md  api-response-schema.json
src/: app.py
src/catalog_searcher/: app.py  server.py
src/catalog_searcher/search/: __init__.py  alma.py  cql.py  primo.py  worldcat.py
tests/: conftest.py  test_alma.py  test_app.py  test_cql.py  test_get_item_format.py  test_primo.py  test_server.py  test_worldcat.py
tests/data/: alma_response.xml  env  primo_book_search_response.json
tests/test_alma/: env
tests/test_primo/: primo_article_search_response.json
tests/test_worldcat/: env  no_records_response.json  response.json
