[project]
name = "catalog-searcher"
version = "2.0.0-dev"
requires-python = ">=3.10"
dependencies = [
    "cql-parser",
    "environs",
    "flask",
    "furl",
    "paste",
    "pymods",
    "requests",
    "uritemplate",
    "urlobject",
    "waitress",
]

[project.optional-dependencies]
test = [
    "httpretty",
    "psutil",
    "pytest",
    "pytest-cov",
    "pytest-datadir",
    "ruff",
]

[project.scripts]
catalog-searcher = 'catalog_searcher.server:run'

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    'E', # pycodestyle errors
    'W', # pycodestyle warnings
]
